--- a/Examen_AllanT/Menu.Master
+++ b/Examen_AllanT/Menu.Master
@@ -7,7 +7,7 @@
     <title>Mantenimiento</title>
     <link href="Styles/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-   
+
 </head>
 <body>
     <form id="form1" runat="server">
@@ -19,16 +19,32 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item ">
+                    <li class="nav-item" id="equipostab" runat="server">
                         <a class="nav-link" href="Equipos.aspx">Equipos <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Usuarios.aspx">Usuarios</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="tecnicostab" runat="server">
                         <a class="nav-link" href="Tecnicos.aspx">Técnicos</a>
                     </li>
+                    <li class="nav-item" id="rolestab" runat="server">
+                        <a class="nav-link" href="Roles.aspx">Roles</a>
+                    </li>
+                    <li class="nav-item" id="asigrolestab" runat="server">
+                        <a class="nav-link" href="AsigRoles.aspx">Asignacion de Roles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Consultas.aspx">Consultas</a>
+                    </li>
+
                 </ul>
+                <div class="navbar-nav ml-auto">
+                    <!-- Mueve el botón "Cerrar Sesión" fuera del collapse y agrega la clase ml-auto para alinear a la derecha -->
+                    <asp:Button ID="miBoton" runat="server" Text="Cerrar Sesión" CssClass="botonComoEnlace" OnClick="miBoton_Click" />
+
+
+                </div>
             </div>
         </nav>
 
