--- a/Examen_AllanT/Styles.css
+++ b/Examen_AllanT/Styles.css
@@ -33,3 +33,70 @@
 .jumbotron p {
     color: #6c757d; /* Color gris Bootstrap */
 }
+body {
+    font-family: Arial, sans-serif;
+    background-image: url('Imagenes/login.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    padding: 50px; /* Aumenta el padding para centrar más verticalmente */
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Alinea el contenido en el centro horizontal */
+    height: 100vh;
+}
+
+#form1 {
+    margin: 20px;
+    max-width: 400px;
+}
+
+div {
+    margin-bottom: 20px;
+}
+h2 {
+    font-size: 30px; /* Ajusta el tamaño del título según tus preferencias */
+    color: #FFD700; /* Color amarillo para combinar con el fondo */
+}
+
+input {
+    width: 100%;
+    padding: 12px;
+    box-sizing: border-box;
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    border: 2px solid #FFD700; /* Borde amarillo */
+    border-radius: 20px; /* Bordes circulares */
+    background-color: #FFD700; /* Fondo amarillo */
+    color: red; /* Texto rojo */
+}
+
+button {
+    width: 100%;
+    padding: 15px;
+    font-size: 25px;
+    font-weight: bold;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+    button:hover {
+        background-color: #45a049;
+    }
+
+.botonComoEnlace {
+    background-color: transparent; /* Fondo transparente */
+    border: none; /* Sin borde */
+    padding: 0; /* Sin relleno */
+    text-decoration: underline; /* Subrayado para parecer un enlace */
+    color: blue; /* Color del texto como un enlace típico */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+#GridViewConsultas {
+    text-align:center;
+}
